@@ -1,3 +1,10 @@
+2005-02-28  Chad Fowler  <chad@chadfowler.com>
+	* lib/rubygems/config_file.rb: don't warn about not being able to
+	find config file.
+	* lib/rubygems/doc_manager.rb: (for DHH) don't install rdoc docs for
+	gems that have explicitly set has_rdoc to false (not setting it
+	at all doesn't raise an error)
+
 2005-02-27  Jim Weirich  <jim@weirichhouse.org>
 
 	* lib/rubygems/config_file.rb
